objects/Lead.object
<CustomObject>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i__CreatedForUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user on whose behalf the Contact was created</description>
        <label>Created for</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028MSBEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__DaysSinceLastMail__c</fullName>
        <description>Number of days since the last email (inbound or outbound)</description>
        <formula>NOW() -  i__LastMailTime__c</formula>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastInboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent by this Lead</description>
        <label>Last Inbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Leads (Last Inbound Email)</relationshipLabel>
        <relationshipName>LastInboundEmailForLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastInboundTime__c</fullName>
        <description>Time of the most recent email sent by this Lead</description>
        <formula>i__LastInboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent by this Lead</inlineHelpText>
        <label>Last Inbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailTimeDelta__c</fullName>
        <description>Difference, in days, between the time the last outbound email was sent and the time the last inbound email was received</description>
        <formula>i__LastOutboundTime__c -  i__LastInboundTime__c</formula>
        <label>Last Mail Time Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastMailTime__c</fullName>
        <description>Time of the most recent email sent or received by this Lead</description>
        <formula>i__LastMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent or received by this Lead</inlineHelpText>
        <label>Last Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email to or from this Lead</description>
        <label>Last Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Leads (Last Email)</relationshipLabel>
        <relationshipName>LastEmailForLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent to this Lead</description>
        <label>Last Outbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Leads (Last Outbound Email)</relationshipLabel>
        <relationshipName>LastOutboundEmailForLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundTime__c</fullName>
        <description>Time of the most recent email sent to this Lead</description>
        <formula>i__LastOutboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent to this Lead</inlineHelpText>
        <label>Last Outbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__OtherEmails__c</fullName>
        <description>Enter additional email addresses here, one per line</description>
        <label>Other Email Addresses</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>